Fix blog spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,7 +7,7 @@
 /*
 */
 
-.card {
+.showcase-card {
     height: 180px;
 }
 
